# prompt-forge

./: .gitignore  README.md  RELEASING.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/adapters/: db.ts  keychain-secret-store.ts  sqlite-history-store.ts  sqlite-prefs-store.ts  sqlite-template-store.ts  tauri-http-client.ts
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  ConsentBanner.tsx  Root.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
apps/web/src/adapters/: fetch-http-client.test.ts  fetch-http-client.ts  indexeddb-history-store.test.ts  indexeddb-history-store.ts  indexeddb-prefs-store.test.ts  indexeddb-prefs-store.ts  indexeddb-template-store.test.ts  indexeddb-template-store.ts  key-vault.ts  posthog-analytics.ts  webcrypto-secret-store.test.ts  webcrypto-secret-store.ts
apps/web/src/landing/: Landing.tsx
apps/web/src/lib/: idb.ts
e2e/: generate.spec.ts
