[package]
name = "promptforge"
version = "0.0.0"
description = "PromptForge — générateur de meilleur prompt (desktop)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "promptforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
keyring = { version = "3", features = ["windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
